--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -12,7 +12,9 @@
 \RequirePackage{mathrsfs}  % for "mathscr"
 \RequirePackage{bm}        % for bold math symbols
 \RequirePackage{physics}   % for derivatives and lots of operators
+
 \RequirePackage{cancel}    % for canceling terms
+\renewcommand{\CancelColor}{\color{red}}
 
 % *-------------------*
 % | *** Shortcuts *** |
